--- a/praisal/templates/praisal.html
+++ b/praisal/templates/praisal.html
@@ -2,17 +2,29 @@
 {% block title %}Appraise{% endblock %}
 {% block content %}
 {% csrf_token %}
-<h1>Appraise items:</h1>
-<form action="{% url "praisal" %}" method="post">
-    {% csrf_token %}
-    {{ form_items.as_p }}
-    <input type="submit" value="Submit" />
-</form>
-
-<h1>View praisal:</h1>
-<form action="{% url "praisal" %}" method="post">
-    {% csrf_token %}
-    {{ form_view.as_p }}
-    <input type="submit" value="Submit" />
-</form>
+<section id="evaluate-estimate">
+    <div class="row">
+      	<div class="col-lg-8 mx-auto text-center">
+			<div class="container">
+				<h2 class="section-heading text-black">Evaluate content</h2>
+        		<hr class="my-4">
+				<form action="{% url "praisal" %}" method="post">
+					{% csrf_token %}
+					{{ form_items.as_p }}
+        			<input type="submit" value="Get price!" class="btn btn-primary btn-xl js-scroll-trigger"/>
+				</form>
+			</div>
+			<div class="container">
+				<h2 class="section-heading text-black"> View estimation</h2>
+        		<hr class="light my-4">
+				<form action="{% url "praisal" %}" method="post">
+					{% csrf_token %}
+					{{ form_view.as_p }}
+        			<input type="submit" value="Get it!" class="btn btn-primary btn-xl js-scroll-trigger"/>
+				</form>
+				</section>
+			</div>
+		</div>
+	</div>
+</section>
 {% endblock %}
